--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   },
   "homepage": "https://github.com/vinimtex/ekki_api#readme",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-cluster": "0.0.5",
+    "helmet": "^3.13.0",
+    "jsonwebtoken": "^8.3.0",
     "tabel": "^2.6.11",
-    "throw.js": "^3.0.1"
+    "throw.js": "^3.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
